# FileManagerTauri

./: .gitattributes  .gitignore  README.md  biome.json  eslint.config.js  lint-staged.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.core.config.ts
.github/: PR_CHECKLIST.md  copilot-instructions.md
.github/workflows/: build.yml  ci.yml
docs/: IMPLEMENTATION_STEPS.md  IMPORT_BOUNDARIES.md
docs/superpowers/plans/: 2026-06-19-recycle-bin-undo.md
e2e/: breadcrumbs.spec.ts  constants.ts  copy-paste.spec.ts  file-operations.spec.ts  file-row-hover.spec.ts  fixtures.ts  helpers.ts  keyboard-navigation.spec.ts  persisted-layout-migration.spec.ts  preview-panel.spec.ts  recent-folders-hover.spec.ts  rename-inline.spec.ts  search-flow.spec.ts  search-real-files.spec.ts  sidebar-persistence.spec.ts  tab-management.spec.ts  tauri-shim.ts
e2e/fixtures/: fs-setup.ts
scripts/: sync-versions.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  error.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: config.rs  error.rs  file_ops.rs  mod.rs  preview.rs  search.rs  security_tests.rs  types.rs  validation.rs  watcher.rs
src-tauri/src/commands/file_ops/: copy_move.rs  delete.rs  read.rs  write.rs
src-tauri/src/commands/fs/: copy_move.rs  delete.rs  mod.rs  read.rs  write.rs
src-tauri/src/models/: drive_info.rs  events.rs  file_entry.rs  mod.rs  preview.rs  search.rs
src-tauri/tests/: copy_symlink.rs  file_content_limit.rs  file_ops_integration.rs  path_validation.rs  preview_integration.rs  search_integration.rs  smoke_common.rs  watcher_integration.rs
src-tauri/tests/common/: mod.rs
src/__tests__/: DriveItem.test.tsx  getParent.test.ts  main.coverage.test.ts  sortEntries.test.ts  useFileWatcher.test.tsx  useTauriEvent.test.tsx
src/app/: index.tsx
src/app/__tests__/: bootstrap.test.tsx
src/app/providers/: QueryProvider.tsx  index.ts
src/app/styles/: globals.css
src/entities/: index.ts
src/entities/app-settings/: index.ts
src/entities/drive/: index.ts
src/entities/file-entry/: index.ts
src/entities/file-selection/: index.ts
src/entities/layout/: index.ts
src/entities/navigation/: index.ts
src/features/: index.ts
src/features/bookmarks/: index.ts
src/features/clipboard/: index.ts
src/features/command-palette/: index.ts
src/features/confirm/: index.ts
src/features/context-menu/: index.ts
src/features/delete-confirm/: index.ts
src/features/file-dialogs/: index.ts
src/features/file-selection/: index.ts
src/features/home/: index.ts
src/features/inline-edit/: index.ts
src/features/layout/: index.ts  panelController.ts  sync.ts
src/features/navigation/: index.ts
src/features/operations-history/: index.ts
src/features/quick-filter/: index.ts
src/features/recent-folders/: index.ts
src/features/rubber-band/: index.ts
src/features/search-content/: index.ts
src/features/settings/: index.ts
src/features/sorting/: index.ts
src/features/tabs/: index.ts
src/features/view-mode/: index.ts
src/pages/: index.ts
src/shared/: index.ts
src/test/: setup.ts
src/types/: global.d.ts
src/widgets/: index.ts
(+342 files in other folders)
