[package]
name = "file-manager-tauri"
version = "0.2.0"
description = "Desktop File Manager built with Tauri"
authors = ["kotru21"]
edition = "2024"

[lib]
name = "file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
chrono = { version = "0.4.42", features = ["serde"] }
rayon = "1.10"
notify = "6.1"
base64 = "0.22"
mime_guess = "2.0"

