[package]
name = "file-manager-tauri"
version = "0.4.2"
description = "Desktop File Manager built with Tauri"
authors = ["kotru21"]
edition = "2024"

[lib]
name = "file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.11"
notify = "8.2"
base64 = "0.22"
mime_guess = "2.0"
trash = "5"
thiserror = "2"
dirs = "6"
glob = "0.3"
sysinfo = "0.37"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = true
codegen-units = 1
strip = true
