[package]
name = "file-manager-tauri"
version = "0.3.0"
description = "Desktop File Manager built with Tauri"
authors = ["kotru21"]
edition = "2021"

[lib]
name = "file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
chrono = { version = "0.4.43", features = ["serde"] }
rayon = "1.10"
notify = "6.1"
base64 = "0.22"
mime_guess = "2.0"
thiserror = "2.0"
image = "0.24"
zip = "2"
calamine = "0.26"
quick-xml = "0.37"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
